--- a/app/src/main/res/layout/fragment_inbox.xml
+++ b/app/src/main/res/layout/fragment_inbox.xml
@@ -10,7 +10,7 @@
 
         <ImageView
             android:id="@+id/inboxImg"
-            android:src="@drawable/ic_chat"
+            android:src="@drawable/ic_comment_black"
             android:layout_centerInParent="true"
             android:layout_width="50dp"
             android:layout_height="50dp" />
