--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -12,7 +12,7 @@
 
         <ImageView
             android:id="@+id/imgSettings"
-            android:src="@drawable/ic_settings"
+            android:src="@drawable/ic_settings_black"
             android:layout_centerInParent="true"
             android:layout_width="50dp"
             android:layout_height="50dp" />
