--- a/app/src/main/res/menu/my_navigation_items.xml
+++ b/app/src/main/res/menu/my_navigation_items.xml
@@ -10,9 +10,9 @@
 
     <item android:id="@+id/action_inbox"
         android:title="Inbox"
-        android:icon="@drawable/ic_chat" />
+        android:icon="@drawable/ic_comment_black" />
 
     <item android:id="@+id/action_settings"
         android:title="Settings"
-        android:icon="@drawable/ic_settings" />
+        android:icon="@drawable/ic_settings_black" />
 </menu>
