--- a/app/src/main/res/layout/add_listing_screen_two.xml
+++ b/app/src/main/res/layout/add_listing_screen_two.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     android:background="@drawable/add_listing_background"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
@@ -31,6 +31,7 @@
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:layout_marginTop="3dp"
+                android:typeface="serif"
                 android:text="@string/details"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -65,20 +66,53 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <fragment
+            <RelativeLayout
                 android:layout_below="@+id/edtDescription"
-                android:id="@+id/place_autocomplete_fragment"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment" />
+                android:layout_height="match_parent">
 
-            <include
-                android:layout_below="@+id/place_autocomplete_fragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                layout="@layout/map_frag"/>
+                <TextView
+                    android:id="@+id/tvImgTitle"
+                    android:layout_centerHorizontal="true"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:layout_marginTop="3dp"
+                    android:typeface="serif"
+                    android:text="@string/addPhoto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <ImageView
+                    android:id="@+id/imgUpload"
+                    android:layout_marginStart="5dp"
+                    android:background="@color/grey500"
+                    android:layout_marginLeft="5dp"
+                    android:src="@drawable/ic_camera_alt_white"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginTop="3dp"
+                    android:layout_below="@+id/tvImgTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="140dp" />
+
+                <Button
+                    android:id="@+id/btnSelectImage"
+                    android:layout_below="@+id/imgUpload"
+                    android:layout_centerHorizontal="true"
+                    android:background="@color/mundo_blue"
+                    android:layout_marginTop="10dp"
+                    android:textColor="@color/white"
+                    android:layout_width="150dp"
+                    android:layout_height="47dp"
+                    android:text="@string/select_image_to_upload" />
+
+
+            </RelativeLayout>
+
+
 
             <Button
+                android:id="@+id/btnNext"
                 android:text="@string/next"
                 android:layout_alignParentBottom="true"
                 android:layout_width="match_parent"
