removed image upload and added Location Map

--- a/app/src/main/res/layout/add_listing_screen_three.xml
+++ b/app/src/main/res/layout/add_listing_screen_three.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/add_listing_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -25,43 +25,42 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/tvPageTitle"
+                android:id="@+id/tvImgTitle"
                 android:layout_centerHorizontal="true"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 android:layout_marginTop="3dp"
                 android:typeface="serif"
-                android:text="@string/addPhoto"
+                android:text="@string/set_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-            <ImageView
-                android:id="@+id/imgUpload"
-                android:layout_marginStart="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginTop="3dp"
-                android:layout_below="@+id/tvPageTitle"
-                android:layout_width="match_parent"
-                android:layout_height="110dp" />
 
-            <Button
-                android:id="@+id/btn_select_image"
-                android:layout_below="@+id/imgUpload"
+            <android.support.v7.widget.CardView
+                android:id="@+id/autoCompleteCardView"
                 android:layout_centerHorizontal="true"
-                style="@style/Widget.AppCompat.Button.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="47dp"
-                android:text="@string/select_image_to_upload" />
+                android:layout_below="@+id/tvImgTitle"
+                android:layout_marginLeft="3dp"
+                android:layout_marginStart="3dp"
+                android:layout_marginEnd="3dp"
+                android:layout_marginRight="3dp"
+                android:layout_marginTop="3dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <fragment
+                    android:id="@+id/place_autocomplete_fragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment" />
+            </android.support.v7.widget.CardView>
 
+            <include
+                android:layout_below="@+id/autoCompleteCardView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                layout="@layout/map_frag"/>
 
         </RelativeLayout>
-
-
-
-
-
 
     </ScrollView>
 
