--- a/app/src/main/res/layout/add_listing_screen_one.xml
+++ b/app/src/main/res/layout/add_listing_screen_one.xml
@@ -11,8 +11,13 @@
                 android:paddingEnd="5dp"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
+                android:layout_marginRight="1dp"
+                android:layout_marginEnd="1dp"
+                android:layout_marginStart="1dp"
+                android:layout_marginLeft="1dp"
+                android:layout_marginTop="1dp"
                 android:layout_width="wrap_content"
-                android:layout_height="90dp" />
+                android:layout_height="80dp" />
 
             <TextView
                 android:id="@+id/tvPageTitle"
