--- a/app/src/main/res/layout/add_listing_screen_two.xml
+++ b/app/src/main/res/layout/add_listing_screen_two.xml
@@ -12,8 +12,13 @@
         android:paddingEnd="5dp"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
+        android:layout_marginRight="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginTop="1dp"
         android:layout_width="wrap_content"
-        android:layout_height="90dp" />
+        android:layout_height="80dp" />
 
     <ScrollView
         android:fillViewport="true"
@@ -23,7 +28,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/tvPageTitle"
@@ -60,56 +65,47 @@
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp"
                 android:layout_marginEnd="4dp"
-                android:lines="4"
+                android:lines="3"
                 android:gravity="top"
                 android:scrollbars="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <RelativeLayout
+            <TextView
                 android:layout_below="@+id/edtDescription"
+                android:id="@+id/tvImgTitle"
+                android:layout_centerHorizontal="true"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:layout_marginTop="2dp"
+                android:typeface="serif"
+                android:text="@string/addPhoto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:id="@+id/imgUpload"
+                android:layout_marginStart="5dp"
+                android:background="@color/grey500"
+                android:layout_marginLeft="5dp"
+                android:src="@drawable/ic_camera_alt_white"
+                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp"
+                android:layout_marginTop="3dp"
+                android:layout_below="@+id/tvImgTitle"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="130dp" />
 
-                <TextView
-                    android:id="@+id/tvImgTitle"
-                    android:layout_centerHorizontal="true"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:layout_marginTop="3dp"
-                    android:typeface="serif"
-                    android:text="@string/addPhoto"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-                <ImageView
-                    android:id="@+id/imgUpload"
-                    android:layout_marginStart="5dp"
-                    android:background="@color/grey500"
-                    android:layout_marginLeft="5dp"
-                    android:src="@drawable/ic_camera_alt_white"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginTop="3dp"
-                    android:layout_below="@+id/tvImgTitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="140dp" />
-
-                <Button
-                    android:id="@+id/btnSelectImage"
-                    android:layout_below="@+id/imgUpload"
-                    android:layout_centerHorizontal="true"
-                    android:background="@color/mundo_blue"
-                    android:layout_marginTop="10dp"
-                    android:textColor="@color/white"
-                    android:layout_width="150dp"
-                    android:layout_height="47dp"
-                    android:text="@string/select_image_to_upload" />
-
-
-            </RelativeLayout>
-
-
+            <Button
+                android:id="@+id/btnSelectImage"
+                android:layout_below="@+id/imgUpload"
+                android:layout_centerHorizontal="true"
+                android:background="@color/mundo_blue"
+                android:layout_marginTop="6dp"
+                android:textColor="@color/white"
+                android:layout_width="150dp"
+                android:layout_height="47dp"
+                android:text="@string/select_image_to_upload" />
 
             <Button
                 android:id="@+id/btnNext"
@@ -120,9 +116,6 @@
         </RelativeLayout>
 
     </ScrollView>
-
-
-
 
 
 </RelativeLayout>
